@@ -86,7 +86,9 @@ func (l *CheckDrivesize) addDiskDetails(ctx context.Context, check *CheckData, d
 	drive["name"] = ""
 	drive["media_type"] = "0"
 	drive["type"] = "0"
-	drive["mounted"] = "0"
+	if _, ok := drive["mounted"]; !ok {
+		drive["mounted"] = "0"
+	}
 	drive["readable"] = "0"
 	drive["writable"] = "0"
 	drive["removable"] = "0"
@@ -115,7 +117,9 @@ func (l *CheckDrivesize) addDiskDetails(ctx context.Context, check *CheckData, d
 		}
 		usage = &disk.UsageStat{}
 	} else {
-		drive["mounted"] = "1"
+		if _, ok := drive["mounted"]; !ok {
+			drive["mounted"] = "1"
+		}
 	}
 
 	if check != nil {
@@ -366,6 +370,9 @@ func (l *CheckDrivesize) setVolumes(requiredDisks map[string]map[string]string) 
 		entry["letter"] = ""
 		if names != "" {
 			entry["letter"] = fmt.Sprintf("%c", names[0])
+			entry["mounted"] = "1"
+		} else {
+			entry["mounted"] = "0"
 		}
 		requiredDisks[driveOrID] = entry
 	}
